<resources>
    <string name="app_name" translatable="false">Kid Timekeep</string>
    <string name="home_title">My timers</string>
    <string name="settings_title">Settings</string>
    <string name="edit_new_title">New timer</string>
    <string name="cd_settings">Settings</string>
    <string name="seed_preset_teeth">Brush teeth</string>
    <string name="seed_preset_dressed">Get dressed</string>
    <string name="seed_preset_reading">Reading</string>
    <string name="home_select_timer">Pick a timer to see it big</string>
    <string name="home_now">Now</string>
    <string name="home_presets">Presets</string>
    <string name="home_nothing_running">Nothing running</string>
    <string name="home_nothing_running_hint">Tap ▶ on a preset or + for a new timer.</string>
    <string name="timer_left_label">%1$s left</string>
    <string name="timer_paused_label">Paused · %1$s</string>
    <string name="timer_done_badge">Done!</string>
    <string name="cd_new_timer">New timer</string>
    <string name="cd_start_preset">Start %1$s</string>
    <string name="cd_pause">Pause</string>
    <string name="cd_resume">Go on</string>
    <string name="cd_preset_random_look">New look every time</string>
    <string name="cd_timer_card">%1$s, %2$s left</string>
    <string name="cd_timer_big">%1$s: %2$s left of %3$s</string>
    <string name="cd_paused_suffix">, paused</string>
    <string name="cd_timer_done">%1$s: time\'s up</string>
    <string name="cd_restart">Again</string>
    <string name="preset_menu_edit">Edit</string>
    <string name="preset_menu_delete">Delete</string>
    <string name="preset_delete_title">Delete preset?</string>
    <string name="preset_delete_message">\"%1$s\" will be removed. Running timers keep going.</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="duration_short_min">%d min</string>
    <string name="duration_short_sec">%d s</string>
    <string name="duration_short_hour">%d h</string>
    <plurals name="duration_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="duration_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="duration_seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <string name="timer_left">Left</string>
    <string name="timer_passed_of">Passed %1$s of %2$s</string>
    <string name="action_pause">Pause</string>
    <string name="action_go_on">Go on</string>
    <string name="action_start_over">Start over</string>
    <string name="action_add_minute">+1 min</string>
    <string name="start_over_title">Start over?</string>
    <string name="start_over_message">The sand flips and the timer starts again from %1$s.</string>
    <string name="action_ok">OK</string>
    <string name="action_again">Again</string>
    <string name="time_up_title">Time\'s up!</string>
    <string name="time_up_subtitle">%1$s · %2$s</string>
    <string name="action_save_look">Save this look</string>
    <string name="look_saved">Look saved</string>
    <string name="paused_badge">Paused</string>
    <string name="cd_back">Back</string>
    <string name="edit_preset_title">Edit preset</string>
    <string name="edit_name_label">Name</string>
    <string name="edit_name_error">Give the timer a name</string>
    <string name="edit_duration_label">How long</string>
    <string name="edit_duration_custom">h:m:s…</string>
    <string name="edit_duration_hours">Hours</string>
    <string name="edit_duration_minutes">Minutes</string>
    <string name="edit_duration_seconds">Seconds</string>
    <string name="cd_stepper_value">%1$s %2$d</string>
    <string name="edit_shuffle">Shuffle</string>
    <string name="edit_choose_look">Choose pictures &amp; colours</string>
    <string name="edit_save_as_preset">Save as preset</string>
    <string name="edit_keep_look">Keep this look every time</string>
    <string name="action_start">Start</string>
    <string name="cd_edit_timer">Edit timer</string>
    <string name="edit_duration_pause_first">Pause the timer to change its length</string>
    <string name="edit_duration_too_short">Must be longer than the time already passed</string>
    <string name="edit_timer_title">Edit timer</string>
    <string name="action_save">Save</string>
    <string name="action_done">Done</string>
    <string name="look_title">Pictures &amp; colours</string>
    <string name="look_favourites">Favourite looks</string>
    <string name="look_top_picture">Top picture</string>
    <string name="look_bottom_picture">Bottom picture</string>
    <string name="look_top_sand">Top sand</string>
    <string name="look_bottom_sand">Bottom sand</string>
    <string name="cd_close">Close</string>
    <string name="cd_increase">More %1$s</string>
    <string name="cd_decrease">Less %1$s</string>
    <string name="picture_heart">Heart</string>
    <string name="picture_star">Star</string>
    <string name="picture_blossom">Blossom</string>
    <string name="picture_smiley">Smiley</string>
    <string name="picture_sun">Sun</string>
    <string name="picture_moon">Moon</string>
    <string name="picture_fish">Fish</string>
    <string name="picture_cat">Cat</string>
    <string name="picture_dog">Dog</string>
    <string name="picture_car">Car</string>
    <string name="picture_tree">Tree</string>
    <string name="picture_butterfly">Butterfly</string>
    <string name="picture_apple">Apple</string>
    <string name="picture_rainbow">Rainbow</string>
    <string name="picture_unicorn">Unicorn</string>
    <string name="picture_rocket">Rocket</string>
    <string name="sand_lavender">Lavender</string>
    <string name="sand_sky">Sky</string>
    <string name="sand_mint">Mint</string>
    <string name="sand_peach">Peach</string>
    <string name="sand_sand">Sand</string>
    <string name="sand_pink">Pink</string>
    <string name="sand_night">Night</string>
    <string name="sand_lemon">Lemon</string>
    <string name="cd_look">%1$s on %2$s sand, %3$s on %4$s sand</string>
    <string name="settings_show_numbers">Show numbers</string>
    <string name="settings_sound">Sound when done</string>
    <string name="settings_vibrate">Vibrate when done</string>
    <string name="settings_keep_screen_on">Keep screen on</string>
    <string name="settings_language">Language</string>
    <string name="language_system">System default</string>
    <string name="settings_theme">Theme</string>
    <string name="theme_system">System default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="settings_about">About</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_emoji_credit">Emoji: Noto Color Emoji, Apache License 2.0</string>
    <string name="about_license_title">Licences</string>
    <string name="about_copyright" translatable="false">Copyright (C) 2026 Santa Zarina</string>
    <string name="about_app_license">Kid Timekeep is free software under the GNU GPL v3.</string>
    <string name="about_source_code">Source code</string>
    <string name="action_close">Close</string>
    <string name="channel_time_up">Time\'s up</string>
    <string name="channel_time_up_sound_only">Time\'s up (sound only)</string>
    <string name="channel_time_up_vibrate_only">Time\'s up (vibrate only)</string>
    <string name="channel_time_up_silent">Time\'s up (silent)</string>
    <string name="notification_time_up">Time\'s up!</string>
    <string name="notif_rationale_title">Let Kid Timekeep tell you when time is up?</string>
    <string name="notif_rationale_text">We\'ll show a notification with a sound when a timer finishes, even if the app is closed.</string>
    <string name="action_allow">Allow</string>
    <string name="action_not_now">Not now</string>
    <string name="settings_notifications">Notifications</string>
    <string name="notif_allowed">Allowed ✓</string>
    <string name="notif_turn_on">Turn on</string>
</resources>
